--- a/css/global.css
+++ b/css/global.css
@@ -10,6 +10,53 @@ body {
 
 /* #region header*/
 
+.burnav {
+    position: absolute;
+    left: 0;
+    top: 407px;
+    width: 85vw;
+    height: 79vh;
+    background-color: #FFF3DD;
+    z-index: 10;
+    transform: translateX(-900px);
+    border: 5px solid wheat;   
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.burnav.open {
+    transform: translateX(0);
+    transition: .3s;
+}
+
+.burnav form {
+    padding-left: 70px;
+}
+.burnav form input {
+    width: 85%;
+    height: 5vh;
+    font-size: 4em;
+    border-radius: 35px;
+    color: #03989e;
+}
+
+.burnav ul {
+    list-style-type: none;
+    padding-left: 70px;
+    font-size: 5.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 0;
+    height: 80%;
+}
+
+.burnav ul li a {
+    color: black;
+}
+
+
 header {
     width: 100%;
     height: 16vh;
@@ -60,7 +107,7 @@ footer {
     grid-template-columns: 10% 50% 40%;
 }
 
-nav {
+footer nav {
     grid-column-start:2 ;
 }
 
