--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,7 @@ body {
 .burnav {
     position: absolute;
     left: 0;
-    top: 407px;
+    top: 355px;
     width: 85vw;
     height: 79vh;
     background-color: #FFF3DD;
@@ -53,7 +53,7 @@ body {
 }
 
 .burnav ul li a {
-    color: black;
+    color: #fa8072;
 }
 
 
