--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    transition: 0.3s;
 }
 
 .burnav.open {
