--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,10 @@ main {
     object-fit: cover;
 }
 
+.fiction {
+    object-fit: cover;
+}
+
 .vignette h2 {
     text-align: center;
     font-size: 3em;
