--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 .banniere {
     width: 100%;
     height: 40vh;
+    margin-top: 21vh
 }
 
 main {
@@ -30,13 +31,13 @@ main {
     width: 75%;
     background-color: #FFF3DD;
     height: 45vh;
-    border-radius: 75px;
+    border-radius: 45px;
 }
 
 .vignette img {
     width: 100%;
     height: 45%;
-    border-radius: 75px 75px 0px 0px;
+    border-radius: 45px 45px 0px 0px;
 }
 
 .thriller {
@@ -49,18 +50,43 @@ main {
 
 .vignette h2 {
     text-align: center;
-    font-size: 3em;
+    font-size: 1.5em;
     margin: 0;
     border-bottom: solid 2px black;
     width: 100%;
 }
 
 .vignette p {
-    font-size: 2.5em;
+    font-size: 1em;
     width: 80%;
+    height: 35%;
     margin: 0;
     text-align: justify;
     overflow: scroll;
+    font-family: 'Arvo';
 }
 
 
+@media screen and (min-width: 768px) {
+    main {
+        height: 125vh;
+    }
+
+    .center {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    .vignette {
+        width: 45%;;
+        height: 35vh;
+    }
+
+    .vignette h2 {
+        font-size: 2em;
+    }
+
+    .vignette p {
+        font-size: 1.5em;
+    }
+}
