--- a/css/global.css
+++ b/css/global.css
@@ -69,7 +69,19 @@ header {
     justify-content: space-around;
     background-color: white;
     position: fixed;
-    border-bottom: solid 5vh wheat;
+    /* border-bottom: solid 5vh wheat; */
+}
+
+.barre {
+    height: 5vh;
+    width: 100%;
+    background-color: wheat;
+    position: fixed;
+    top: 16vh;
+}
+
+.barre nav {
+    display: none;
 }
 
 .fas.fa-bars {
@@ -175,5 +187,43 @@ footer p a {
     }
     .fab {
         font-size: 4em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    
+    .barre nav ul {
+        display: flex;
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        width:100%;
+        justify-content: space-around;
+        font-size: 1.7em;
+        align-items: center;
+        max-height: 5vh;
+    }
+
+    .barre nav {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .barre nav ul li a {
+        color: black;
+        text-decoration: none;
+    }
+
+    .barre nav ul li a:hover {
+        color: #fa8072;
+    }
+
+    .fas.fa-bars {
+        display: none;
+    }
+
+    .burnav {
+        display: none;
     }
 }
