--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,11 @@ main {
     font-family: 'Arvo';
 }
 
+.vignette p {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 
 @media screen and (min-width: 768px) {
     main {
@@ -82,9 +87,9 @@ main {
         height: 35vh;
     }
 
-    .vignette h2 {
+    /* .vignette h2 {
         font-size: 2em;
-    }
+    } */
 
     .vignette p {
         font-size: 1.5em;
@@ -105,12 +110,25 @@ main {
     }
 
     .vignette {
-        width: 28%;
+        width: 23%;
         height: 50vh;
+        margin-inline: 2%;
+    }
+
+    .vignette:hover {
+        transform: translateY(-3%);
+        box-shadow: 10px 10px 104px -6px rgba(0,0,0,0.49);
+        -webkit-box-shadow: 10px 10px 104px -6px rgba(0,0,0,0.49);
+        -moz-box-shadow: 10px 10px 104px -6px rgba(0,0,0,0.49);
     }
 
     .vignette p::-webkit-scrollbar {
         display: none;
+      }
+
+    .vignette p {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
       }
       
 }
