--- a/css/global.css
+++ b/css/global.css
@@ -73,6 +73,7 @@ header {
     justify-content: space-around;
     background-color: white;
     position: fixed;
+    z-index: 10;
     /* border-bottom: solid 5vh wheat; */
 }
 
@@ -82,6 +83,7 @@ header {
     background-color: wheat;
     position: fixed;
     top: 16vh;
+    z-index: 10;
 }
 
 .barre nav {
