--- a/css/boutique.css
+++ b/css/boutique.css
@@ -21,7 +21,7 @@
 main {
     background-color: #FFF3DD;
     width: 100%;
-    height: 300vh;
+    height: 490vh;
     display: flex;
     justify-content: center;
     margin-top: -6px;
@@ -50,11 +50,12 @@ h2 {
     height: 45vh;
     align-items: center;
     margin: 4vh 0px;
+    font-size: 1.2em;
 }
 
 .catégories li {
     background-color: wheat;
-    border-radius: 10px;
+    border-radius: 25px;
     text-align: center;
     width: 90%;
 }
@@ -69,17 +70,19 @@ h2 {
     /* display: flex; */
     justify-content: center;
     overflow: scroll;
-    width: 95%;
+    width: 100%;
+    margin-bottom: 2vh;
 }
 
 .xScroll {
-    width: 300%;
+    width: 225vw;
+    min-width: min-content;
     display: flex;
     /* justify-content: space-around; */
 }
 
 .vignette {
-    height: 60vh;
+    height: 57vh;
     width: 240px;
     background-color: #FFF3DD;
     border-radius: 15px;
@@ -92,12 +95,55 @@ h2 {
 
 .vignette img {
     height: 30vh;
+    width: 43vw;
+    border-radius: 15px;
+    margin-top: 1vh;
 }
 
 .vignette h3 {
     margin: 0;
 }
 
+.petite-police {
+    font-size: 0.8em;
+}
+
 .vignette p {
     margin: 0;
+}
+
+.dispo {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 25vw;
+}
+
+.circle {
+    height: 7px;
+    width: 7px;
+    background-color: #4DB00D;
+    border-radius: 50%;
+}
+
+.dispo p {
+    color: #41AC00;
+}
+
+a .btn-ajouter {
+    width: 100%;
+    background-color: wheat;
+    border-radius: 10px;
+}
+
+a .btn-ajouter p {
+    text-align: center;
+    color: black;
+    
+}
+
+.vignette a {
+    text-decoration: none;
+    width: 65%;
+    margin-bottom: 1vh;
 }
