--- a/css/global.css
+++ b/css/global.css
@@ -95,7 +95,7 @@ header {
     color: #fa8072;
 }
 
-header img {
+header a img {
     width: 70vw;
     height: 13vh;
     position: relative;
@@ -257,7 +257,7 @@ footer p a {
     }
 
 
-    header img {
+    header a img {
         width: 20vw;
         height: 10vh;
     }
