--- a/css/boutique.css
+++ b/css/boutique.css
@@ -213,7 +213,7 @@ a .btn-ajouter p {
 
 @media screen and (min-width: 1024px) {
 
-    .laboutique {
+    .store {
         color: #fa8072 !important;
     }
 
@@ -312,4 +312,30 @@ a .btn-ajouter p {
         font-size: 1.3em;
     }
 
+}
+
+@media screen and (min-height:750px) and (max-height:882px) {
+    main {
+        height: 362vh;
+    }
+
+    .boutique {
+        left: 38vw;
+        width: 28%;
+        height: 11vh;
+    }
+
+    .catégories li {
+        width: 90%;
+        font-size: 1em;
+        white-space: nowrap;
+    }
+
+    .imlink {
+        height: 47%;
+    }
+
+    a .btn-ajouter p {
+        font-size: 1em;
+    }
 }
