--- a/css/connexion.css
+++ b/css/connexion.css
@@ -42,31 +42,145 @@ main form input {
 
 }
 
+.button {
+    width: 70%;
+    text-decoration: none;
+}
+
 .btn-co {
-    width: 76%;
+    width: 100%;
     background-color: rgba(245, 222, 179, 0.90);
     height: 6vh;
     display: flex;
     justify-content: center;
+    align-items: center;
     border-radius: 10px;
 }
 
 .btn-co p {
     margin: 0;
     font-size: 1.3em;
+    font-style: none;
+    color: black;
 }
 
 .btn-creer {
-    width: 76%;
+    width: 100%;
     background-color: rgba(3, 152, 158, 0.79);
     height: 6vh;
     display: flex;
     justify-content: center;
+    align-items: center;
     border-radius: 10px;
     color: white;
 }
 
+
+
 .btn-creer p {
     margin: 0;
-    font-size: 1.3em
+    font-size: 1.3em;
+    font-style: none;
+}
+
+@media screen and (min-height: 780px) and (max-width: 768px) {
+    main form {
+        height: 50%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    main img {
+        margin-top: 6vh;
+    }
+
+    main form {
+        height: 60%;
+        width: 75vw;
+        left: 14vw;
+    }
+
+    main form h2 {
+        font-size: 2em;
+    }
+
+    .identifiant {
+        left: -18vw;
+    }
+    
+    .mdp {
+        left: -16vw;
+    }
+
+    main form input {
+        margin-top: -4%;
+        height: 7%;
+    }
+
+    .btn-co p {
+        font-size: 1.8em;
+    }
+
+    main form a {
+        font-size: 1.5em;
+    }
+
+    .btn-creer {       
+        margin-bottom: 1vh;
+    }
+
+    .btn-creer p {
+        font-size: 1.8em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    main img {
+        margin-top: 0;
+        object-fit: cover;
+        object-position: 0px 71%;
+        height: 90vh;
+    }
+
+    main form {
+        height: 65%;
+        width: 25vw;
+        left: 8vw;
+    }
+
+    .identifiant {
+        left: -5vw;
+    }
+
+    .mdp {
+        left: -4vw;
+    }
+}
+
+@media screen and (min-height:750px) and (max-height:882px) {
+    main form {
+        height: 65%;
+        width: 30vw;
+        left: 8vw;
+    }
+
+    .mdp {
+        left: -3vw;
+    }
+
+    .btn-co p {
+        font-size: 1.3em;
+    }
+
+    main form a {
+        font-size: 1em;
+    }
+
+    .btn-creer p {
+        font-size: 1.3em;
+    }
+
+    main form input {
+        width: 80%;
+    }
 }
